# demo-app

./: .gitignore  .gitmodules  bun.lockb  package.json  svelte.config.js
src/: app.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: ReadOnlyDiv.svelte  Toast.svelte  ToastContainer.svelte  onlineUsers.svelte  toastStore.ts  vrcUserCard.svelte
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +page.svelte  +page.ts
src/routes/about/[slug]/: +page.server.js  +page.svelte  +page.ts
src/routes/friends/: +page.svelte
src/routes/friends/[id]/: +page.ts
src/routes/test/: +page.svelte
src/routes/websocket/: +page.svelte  wsParser.ts
src/utils/: fetch.ts  store.ts  toast.ts
